[java] refactor